refactor: :lipstick: Atualização dos card na página incial enquanto logado
Os cards foram padronizados, todos os textos do card estão alinhas à esquerda, facilitando a leitura por parte do usuário, o botão também foram padronizados para estarem na mesma altura.

#70

--- a/stocktrade/src/main/resources/templates/indexLogado.html
+++ b/stocktrade/src/main/resources/templates/indexLogado.html
@@ -187,71 +187,8 @@
           </div>
         </div>
 
-        <div class="card-group justify-content-center">
-          <div class="mb-3 custom-card7 ms-5 text-center">
-            <img
-              src="images/noticias-pic.png"
-              class="img-fluid rounded-start"
-              alt="edu-financeira"
-            />
-            <p class="card-text">
-              <small class="text-body-secondary fw-bold"
-                >O Necessário para Investir</small
-              >
-            </p>
-            <p class="card-text">
-              Aprenda como realizar seus primeiros investimentos. A StockTrade
-              irá auxiliar você a garantir a melhor maneira de gerir seu
-              dinheiro.
-            </p>
-            <a
-              class="btn btn-outline-primary botao1"
-              >Investimentos</a
-            >
-          </div>
-
-          <div class="mb-3 custom-card7 ms-5 text-center">
-            <img
-              src="images/noticias-pic-2.png"
-              class="img-fluid rounded-top"
-              alt="edu-financeira"
-            />
-            <p class="card-text">
-              <small class="text-body-secondary fw-bold"
-                >Análises diárias do mercado financeiro</small
-              >
-            </p>
-            <p class="card-text custom-padding-bottom-text">
-              Acesse a ultíma análise completa do mercado, destacando as
-              melhores ações para compra e venda na atualidade
-            </p>
-            <a
-              class="btn btn-outline-primary botao1"
-              >Mercado</a
-            >
-          </div>
-
-          <div class="mb-3 custom-card7 ms-5 text-center">
-            <img
-              src="images/noticias-pic-3.png"
-              class="img-fluid rounded-top"
-              alt="edu-financeira"
-            />
-            <p class="card-text">
-              <small class="text-body-secondary fw-bold"
-                >Entenda onde você está depositando seu dinheiro</small
-              >
-            </p>
-            <p class="card-text">
-              O que é uma ação? Porquê confiar nesse tipo de investimento?
-              Entenda o funcionamento desses ativos.
-            </p>
-            <a
-              class="btn btn-outline-primary botao1"
-              >Ações</a
-            >
-          </div>
-        </div>
+        <div th:replace="~{fragments/cardHomeLogado/grupoCardHomeLogado :: grupoCardHomeLogado}"></div>
+        
       </div>
     </main>
 
