--- a/stocktrade/src/main/resources/static/css/stylesheet.css
+++ b/stocktrade/src/main/resources/static/css/stylesheet.css
@@ -77,6 +77,7 @@ footer {
   padding: 15px 30px;
   transition: background-color 0.3s;
   font-size: 16px;
+  margin-top: 30px;
 }
 
 .botao1:hover {
@@ -224,11 +225,24 @@ footer {
 .custom-card7 {
   background-color: var(--dark-blue);
   color: var(--white);
-  border: none;
   width: 300px !important;
   height: 480px !important;
-  flex-direction: column;
-  align-items: flex-start;
+  border-radius: 10px;
+  margin-left: 30px;
+}
+
+.custom-card7:first-child {
+  margin-left: 0px;
+}
+
+.custom-card7 img {
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+
+.texto-card7 {
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 .card {
