--- a/stocktrade/src/main/resources/static/css/stylesheet.css
+++ b/stocktrade/src/main/resources/static/css/stylesheet.css
@@ -188,11 +188,25 @@ footer {
   background-color: var(--dark-blue);
   color: var(--white);
   border: none;
-  border-radius: 65px;
+  border-radius: 30px;
   width: 300px !important;
   height: 480px !important;
   flex-direction: column;
   align-items: flex-start;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: 48px;
+}
+
+.custom-card3:first-child {
+  margin-left: 0px;
+}
+
+
+
+
+.custom-card3 a {
+  margin-top: 30px;
 }
 
 .custom-card4 {
