--- a/stocktrade/src/main/resources/templates/invista.html
+++ b/stocktrade/src/main/resources/templates/invista.html
@@ -192,92 +192,13 @@
           </div>
 
           <div class="card-group justify-content-center">
-            <div class="mb-3 custom-card3 ms-5">
-              <div class="card-body">
-                <h5 class="card-title fw-bold text-center">FIIs</h5>
-                <p class="card-text">
-                  Fundo de investimento imobiliário é uma comunhão de recursos
-                  destinados à aplicação em empreendimentos imobiliários.
-                </p>
-                <p class="card-text">
-                  <small class="text-body-secondary fw-bold">BENEFÍCIOS</small>
-                </p>
-                <p class="card-text">
-                  <span class="text-color-blue2"> - </span> Alta Liquidez
-                </p>
-                <p class="card-text">
-                  <span class="text-color-blue2"> - </span> Dividendos
-                </p>
-                <p class="card-text">
-                  <span class="text-color-blue2"> - </span> Médio Risco
-                </p>
-                <p class="card-text">
-                  <span class="text-color-blue2"> - </span> Longo Prazo
-                </p>
-                <a
-                  class="btn btn-outline-primary botao1 me-4 ms-5 justify-content-cente text-center"
-                  >Invista Agora!</a
-                >
-              </div>
-            </div>
-            <div class="mb-3 custom-card3 ms-5">
-              <div class="card-body">
-                <h5 class="card-title fw-bold text-center">Ações</h5>
-                <p class="card-text">
-                  Parcelas que compõem o capital social de uma empresa, ou seja,
-                  são as unidades de títulos emitidas por sociedades anônimas.
-                </p>
-                <p class="card-text">
-                  <small class="text-body-secondary fw-bold">BENEFÍCIOS</small>
-                </p>
-                <p class="card-text">
-                  <span class="text-color-blue2"> - </span> Alta Rentabilidade
-                </p>
-                <p class="card-text">
-                  <span class="text-color-blue2"> - </span> Dividendos
-                </p>
-                <p class="card-text">
-                  <span class="text-color-blue2"> - </span> Alto Risco
-                </p>
-                <p class="card-text">
-                  <span class="text-color-blue2"> - </span> Curto/Médio Prazo
-                </p>
-                <a
-                  class="btn btn-outline-primary botao1 me-4 ms-5 justify-content-cente text-center"
-                  >Invista Agora!</a
-                >
-              </div>
-            </div>
-            <div class="mb-3 custom-card3 ms-5">
-              <div class="card-body">
-                <h5 class="card-title fw-bold text-center">ETFs</h5>
-                <p class="card-text">
-                  Um exchange-traded fund, ou fundo de índice, é um fundo de
-                  investimento negociado na Bolsa de Valores como se fosse uma
-                  ação.
-                </p>
-                <p class="card-text">
-                  <small class="text-body-secondary fw-bold">BENEFÍCIOS</small>
-                </p>
-                <p class="card-text">
-                  <span class="text-color-blue2"> - </span> Alta Liquidez
-                </p>
-                <p class="card-text">
-                  <span class="text-color-blue2"> - </span> Alto Risco
-                </p>
-                <p class="card-text">
-                  <span class="text-color-blue2"> - </span> Baixa/Alta
-                  Rentabilidade
-                </p>
-                <p class="card-text">
-                  <span class="text-color-blue2"> - </span> Curto/Longo Prazo
-                </p>
-                <a
-                  class="btn btn-outline-primary botao1 me-4 ms-5 justify-content-cente text-center"
-                  >Invista Agora!</a
-                >
-              </div>
-            </div>
+
+            <div th:replace="~{fragments/cardInvista/cardInvista :: cardInvista('FIIs', 'Fundo de investimento imobiliário é uma comunhão de recursos destinados à aplicação em empreendimentos imobiliários.', ${ {'Alta Liquidez', 'Dividendos', 'Médio Risco', 'Longo Prazo'} })}"></div>
+
+            <div th:replace="~{fragments/cardInvista/cardInvista :: cardInvista('Ações', 'Parcelas que compõem o capital social de uma empresa, ou seja, são as unidades de títulos emitidas por sociedades anônimas.', ${ {'Alta Rentabilidade', 'Dividendos', 'Alto Risco', 'Curto/Médio Prazo'} })}"></div>
+
+            <div th:replace="~{fragments/cardInvista/cardInvista :: cardInvista('ETFs', 'Um exchange-traded fund, ou fundo de índice, é um fundo de investimento negociado na Bolsa de Valores como se fosse uma ação.', ${ {'Alta Liquidez', 'Alto Risco', 'Baixa/Alta Rentabilidade', 'Curto/Longo Prazo'} })}"></div>
+            
           </div>
         </div>
       </div>
