--- a/stocktrade/src/main/resources/templates/invista.html
+++ b/stocktrade/src/main/resources/templates/invista.html
@@ -191,15 +191,8 @@
             </div>
           </div>
 
-          <div class="card-group justify-content-center">
-
-            <div th:replace="~{fragments/cardInvista/cardInvista :: cardInvista('FIIs', 'Fundo de investimento imobiliário é uma comunhão de recursos destinados à aplicação em empreendimentos imobiliários.', ${ {'Alta Liquidez', 'Dividendos', 'Médio Risco', 'Longo Prazo'} })}"></div>
-
-            <div th:replace="~{fragments/cardInvista/cardInvista :: cardInvista('Ações', 'Parcelas que compõem o capital social de uma empresa, ou seja, são as unidades de títulos emitidas por sociedades anônimas.', ${ {'Alta Rentabilidade', 'Dividendos', 'Alto Risco', 'Curto/Médio Prazo'} })}"></div>
-
-            <div th:replace="~{fragments/cardInvista/cardInvista :: cardInvista('ETFs', 'Um exchange-traded fund, ou fundo de índice, é um fundo de investimento negociado na Bolsa de Valores como se fosse uma ação.', ${ {'Alta Liquidez', 'Alto Risco', 'Baixa/Alta Rentabilidade', 'Curto/Longo Prazo'} })}"></div>
-            
-          </div>
+          <div th:replace="~{fragments/cardInvista/grupoCardInvista :: grupoCardInvista}"></div>
+          
         </div>
       </div>
     </main>
