feat: :sparkles: Remoção de informação dos campos de ação
Após abrir uma nova ação está sendo removida as informações informadas anteriormente. A funcionalidade foi adicionada na tela de carteira do usuário e na tela de invistimentos logado

#73

--- a/stocktrade/src/main/resources/templates/fragments/tabela/tabelaInvistaLogado.html
+++ b/stocktrade/src/main/resources/templates/fragments/tabela/tabelaInvistaLogado.html
@@ -25,6 +25,7 @@
             <td
               data-bs-toggle="collapse"
               th:attr="data-bs-target='#r' + ${acaoStat.index}"
+              onclick="limparCampos(this)"
             >
               <svg
                 xmlns="http://www.w3.org/2000/svg"
