--- a/stocktrade/src/main/resources/templates/fragments/tabela/tabelaAcoesUser.html
+++ b/stocktrade/src/main/resources/templates/fragments/tabela/tabelaAcoesUser.html
@@ -21,7 +21,7 @@
               <td th:text="'R$ ' + ${acao[3]}"></td>
               <td th:text="${acao[4]} + '%'"></td>
               <td th:text="${acao[2]}"></td>
-              <td data-bs-toggle="collapse" th:attr="data-bs-target='#r' + ${acaoStat.index}">
+              <td data-bs-toggle="collapse" th:attr="data-bs-target='#r' + ${acaoStat.index}" onclick="limparCampos(this)">
                 <a><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-down" viewBox="0 0 16 16">
                 <path fill-rule="evenodd" d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z"/>
               </svg></td>
