--- a/stocktrade/src/main/resources/templates/carteira.html
+++ b/stocktrade/src/main/resources/templates/carteira.html
@@ -149,12 +149,18 @@
       const acoesVenda = document.getElementsByClassName('quantidadeAcoesInputVenda')
       const senhasVenda = document.getElementsByClassName('senhaAutenticacaoInputVenda')
 
+      const precoAcaoVenda = document.getElementsByClassName('quantidadePrecoAcoesInputVenda')
+      const precoAcaoCompra = document.getElementsByClassName('quantidadePrecoAcoesInputCompra')
+
       for (i = 0; i < acoesCompra.length; i++) {
         acoesCompra.item(i).value = ""
         senhasCompra.item(i).value = ""
 
         acoesVenda.item(i).value = ""
         senhasVenda.item(i).value = ""
+
+        precoAcaoVenda.item(i).value = ""
+        precoAcaoCompra.item(i).value = ""
       }
     }
 
