--- a/stocktrade/src/main/resources/templates/fragments/tabela/secao/secaoComprarAcao.html
+++ b/stocktrade/src/main/resources/templates/fragments/tabela/secao/secaoComprarAcao.html
@@ -21,6 +21,15 @@
       <p th:text="'R$ ' + ${acao[1]}"></p>
     </div>
 
+    <div class="input-preco-acao-compra text-start fw-bold">
+      <p class="text-uppercase">Preço desejado por ação</p>
+      <input
+          type="text"
+          class="form-control custom-input-acoes quantidadePrecoAcoesInputCompra"
+          placeholder="Insira o preço desejado por ação"
+        />
+    </div>
+
     <div class="label-valor-total-operacao text-uppercase text-start fw-bold">
       <span>Valor total da operação</span>
     </div>
