--- a/stocktrade/src/main/resources/templates/invistaLogado.html
+++ b/stocktrade/src/main/resources/templates/invistaLogado.html
@@ -84,8 +84,6 @@
       const containerCompra = document.getElementsByClassName("container-comprar");
       const containerVender = document.getElementsByClassName("container-vender");
 
-      console.log("sumindo" + containerCompra.length)
-
       for (i = 0; i < containerCompra.length; i++) {
         containerCompra.item(i).style.display = "none";
         containerVender.item(i).style.display = "grid";
@@ -95,8 +93,6 @@
     function sumirContainerVenderEAparecerContainerCompra(event) {
       const containerCompra = document.getElementsByClassName("container-comprar");
       const containerVender = document.getElementsByClassName("container-vender");
-
-      console.log("sumindo" + containerCompra.length)
 
       for (i = 0; i < containerCompra.length; i++) {
         containerCompra.item(i).style.display = "grid";
@@ -114,12 +110,18 @@
       const acoesVenda = document.getElementsByClassName('quantidadeAcoesInputVenda')
       const senhasVenda = document.getElementsByClassName('senhaAutenticacaoInputVenda')
 
+      const precoAcaoVenda = document.getElementsByClassName('quantidadePrecoAcoesInputVenda')
+      const precoAcaoCompra = document.getElementsByClassName('quantidadePrecoAcoesInputCompra')
+
       for (i = 0; i < acoesCompra.length; i++) {
         acoesCompra.item(i).value = ""
         senhasCompra.item(i).value = ""
 
         acoesVenda.item(i).value = ""
         senhasVenda.item(i).value = ""
+
+        precoAcaoVenda.item(i).value = ""
+        precoAcaoCompra.item(i).value = ""
       }
     }
 
