--- a/stocktrade/src/main/resources/templates/invistaLogado.html
+++ b/stocktrade/src/main/resources/templates/invistaLogado.html
@@ -136,6 +136,7 @@
       const acoes = document.getElementsByClassName('quantidadeAcoesInputCompra')
       const senhas = document.getElementsByClassName('senhaAutenticacaoInputCompra')
       const precoPorAcao = document.getElementsByClassName('quantidadePrecoAcoesInputCompra')
+      const senhaError = document.getElementsByClassName('senha-error-compra')
 
       j = acoes.length;
 
@@ -145,7 +146,7 @@
 
           const siglaAcao = document.getElementById("siglaAcao" + i)
 
-          enviarSolicitacaoCompra(event, acoes.item(i).value, senhas.item(i).value, siglaAcao.innerText, precoPorAcao.item(i).value)
+          enviarSolicitacaoCompra(event, acoes.item(i).value, senhas.item(i).value, siglaAcao.innerText, precoPorAcao.item(i).value, senhaError.item(i))
           break;
         }
         j--;
@@ -156,7 +157,7 @@
       }
     }
 
-    function enviarSolicitacaoCompra(event, quantidadeAcoes, senhaAutenticacao, siglaAcao, precoAcao) {
+    function enviarSolicitacaoCompra(event, quantidadeAcoes, senhaAutenticacao, siglaAcao, precoAcao, senhaError) {
 
       const data = {
         siglaAcao: siglaAcao,
@@ -178,7 +179,6 @@
           } else {
             console.log(response.data);
             response.json().then(data => {
-              const senhaError = document.getElementById("senha-error");
               senhaError.textContent = data.message;
             });
           }
