--- a/stocktrade/src/main/resources/static/css/stylesheet.css
+++ b/stocktrade/src/main/resources/static/css/stylesheet.css
@@ -552,7 +552,7 @@ h4 {
 /* CSS ACORDEAO TABLE COMPRAR */
 .container-comprar {
   margin-left: auto;
-  width: 550px;
+  width: 50%;
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 0px 0px;
@@ -560,12 +560,22 @@ h4 {
   letter-spacing: 1.5px;
   grid-template-areas:
     "label-comprar label-vender"
-    "input-quantidade preco-atual"
-    "input-preco-acao-compra input-preco-acao-compra"
+    "input-quantidade quantidade-disponivel"
+    "input-preco-acao-compra preco-atual"
     "label-valor-total-operacao valor-total-da-operacao"
     "label-saldo-atual saldo-atual"
     "senha-autenticacao senha-autenticacao"
     "button-comprar button-comprar";
+}
+
+.quantidade-disponivel {
+  grid-area: quantidade-disponivel;
+  text-wrap: nowrap;
+  margin-bottom: 0px;
+}
+
+.quantidade-disponivel p:first-child  {
+  margin-bottom: 10px;
 }
 
 .button-comprar { 
@@ -683,7 +693,7 @@ h4 {
   color: var(--white);
   border: none;
   border-radius: 40px;
-  width: 100%;
+  width: 95% !important;
   padding: 3px 3px 3px 10px;
 }
 
