--- a/stocktrade/src/main/resources/templates/fragments/tabela/secao/secaoVenderAcao.html
+++ b/stocktrade/src/main/resources/templates/fragments/tabela/secao/secaoVenderAcao.html
@@ -64,6 +64,6 @@
     </div>
     
     <div class="button-vender text-uppercase text-center fw-bold">
-      <button class="text-uppercase fw-bold">Vender</button> 
+      <button class="text-uppercase fw-bold" onclick="verificarCamposSolicitacaoVenda(this)">Vender</button> 
     </div>
   </div>
