--- a/stocktrade/src/main/resources/templates/invistaLogado.html
+++ b/stocktrade/src/main/resources/templates/invistaLogado.html
@@ -1,59 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head
-    th:replace="~{fragments/headFragment :: head('StockTrade - Invista')}"
-  ></head>
-  <body id="sobre-page">
-    <svg xmlns="../images/logo-bg-off.png" style="display: none"></svg>
+
+<head th:replace="~{fragments/headFragment :: head('StockTrade - Invista')}"></head>
+
+<body id="sobre-page">
+  <svg xmlns="../images/logo-bg-off.png" style="display: none"></svg>
 
   <main>
     <div th:replace="~{fragments/headerLogadoFragment :: header('Invista')}"></div>
 
-      <div class="col-12">
-        <h2 class="text-left custom-margin-left">Invista</h2>
+    <div class="col-12">
+      <h2 class="text-left custom-margin-left">Invista</h2>
+    </div>
+    <div class="col-12">
+      <div class="d-flex align-items-center">
+        <h6 class="text-left custom-margin-left mb-0 me-2">Saldo Atual</h6>
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-eye ml-2"
+          viewBox="0 0 16 16" id="toggleEye">
+          <path
+            d="M16 8s-3-5.5-8-5.5S0 8 0 8s3 5.5 8 5.5S16 8 16 8zM1.173 8a13.133 13.133 0 0 1 1.66-2.043C4.12 4.668 5.88 3.5 8 3.5c2.12 0 3.879 1.168 5.168 2.457A13.133 13.133 0 0 1 14.828 8c-.058.087-.122.183-.195.288-.335.48-.83 1.12-1.465 1.755C11.879 11.332 10.119 12.5 8 12.5c-2.12 0-3.879-1.168-5.168-2.457A13.134 13.134 0 0 1 1.172 8z" />
+          <path d="M8 5.5a2.5 2.5 0 1 0 0 5 2.5 2.5 0 0 0 0-5zM4.5 8a3.5 3.5 0 1 1 7 0 3.5 3.5 0 0 1-7 0z" />
+        </svg>
       </div>
-      <div class="col-12">
-        <div class="d-flex align-items-center">
-          <h6 class="text-left custom-margin-left mb-0 me-2">Saldo Atual</h6>
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            width="16"
-            height="16"
-            fill="currentColor"
-            class="bi bi-eye ml-2"
-            viewBox="0 0 16 16"
-            id="toggleEye"
-          >
-            <path
-              d="M16 8s-3-5.5-8-5.5S0 8 0 8s3 5.5 8 5.5S16 8 16 8zM1.173 8a13.133 13.133 0 0 1 1.66-2.043C4.12 4.668 5.88 3.5 8 3.5c2.12 0 3.879 1.168 5.168 2.457A13.133 13.133 0 0 1 14.828 8c-.058.087-.122.183-.195.288-.335.48-.83 1.12-1.465 1.755C11.879 11.332 10.119 12.5 8 12.5c-2.12 0-3.879-1.168-5.168-2.457A13.134 13.134 0 0 1 1.172 8z"
-            />
-            <path
-              d="M8 5.5a2.5 2.5 0 1 0 0 5 2.5 2.5 0 0 0 0-5zM4.5 8a3.5 3.5 0 1 1 7 0 3.5 3.5 0 0 1-7 0z"
-            />
-          </svg>
-        </div>
-        <p class="h3 fs-8 custom-margin-left" id="saldo">R$<span th:text="${session.usuarioLogado.saldo}"></span></p>
-        <div class="d-flex align-items-center">
-          <p class="h3 fs-8 custom-margin-left mt-4">Ativos Disponíveis</p>
-          <form method="get" action="invistaLogado" class="d-flex custom-margin-left2">
-            <input
-              id="form-busca-acao"
-              class="form-control me-2 input-custom"
-              placeholder="Busque no site..."
-              aria-label="Search"
-              name="busca"
-            />
-            <button
-              class="btn btn-outline-success btn-custom"
-              type="submit"
-            >
-              Pesquisar
-            </button>
-          </form>
-        </div>
-        
-        
+      <p class="h3 fs-8 custom-margin-left" id="saldo">R$<span th:text="${session.usuarioLogado.saldo}"></span></p>
+      <div class="d-flex align-items-center">
+        <p class="h3 fs-8 custom-margin-left mt-4">Ativos Disponíveis</p>
+        <form method="get" action="invistaLogado" class="d-flex custom-margin-left2">
+          <input id="form-busca-acao" class="form-control me-2 input-custom" placeholder="Busque no site..."
+            aria-label="Search" name="busca" />
+          <button class="btn btn-outline-success btn-custom" type="submit">
+            Pesquisar
+          </button>
+        </form>
       </div>
+
+
+    </div>
 
     <div class="container mb-4 justify-content-center">
       <div class="container row justify-content-center">
@@ -189,6 +171,68 @@
         });
     }
 
+  </script>
+
+  <script>
+    function verificarCamposSolicitacaoVenda(event) {
+      const acoes = document.getElementsByClassName('quantidadeAcoesInputVenda')
+      const senhas = document.getElementsByClassName('senhaAutenticacaoInputVenda')
+      const precoPorAcao = document.getElementsByClassName('quantidadePrecoAcoesInputVenda')
+      const senhaError = document.getElementsByClassName('senha-error-venda')
+
+      j = acoes.length;
+
+      for (i = 0; i < acoes.length; i++) {
+
+        if (acoes.item(i).value != "" && senhas.item(i).value != "" && precoPorAcao.item(i).value != "") {
+
+          const siglaAcao = document.getElementById("siglaAcao" + i)
+          console.log(senhaError.item(i))
+
+          enviarSolicitacaoVenda(event, acoes.item(i).value, senhas.item(i).value, siglaAcao.innerText, precoPorAcao.item(i).value, senhaError.item(i))
+          break;
+        }
+        j--;
+      }
+
+      if (j == 0) {
+        alert("Preencha todos os campos obrigatórios")
+      }
+    }
+
+    function enviarSolicitacaoVenda(event, quantidadeAcoes, senhaAutenticacao, siglaAcao, precoAcao, senhaError) {
+
+      console.log(quantidadeAcoes + " " + senhaAutenticacao + " " + siglaAcao)
+
+      const data = {
+        siglaAcao: siglaAcao,
+        quantidadeAcoes: quantidadeAcoes,
+        senhaAutenticacao: senhaAutenticacao,
+        precoAcao: precoAcao
+      }
+
+      fetch("/carteira/vender", {
+        method: "post",
+        headers: {
+          "Content-Type": "application/json",
+        },
+        body: JSON.stringify(data),
+      })
+        .then((response) => {
+          if (response.ok) {
+            window.location.href = "/carteira";
+          } else {
+            console.log(response.data);
+            response.json().then(data => {
+              senhaError.textContent = data.message;
+            });
+          }
+        })
+        .catch((error) => {
+          alert("Ocorreu um erro ao vender!");
+          console.error(error);
+        });
+    }
   </script>
 </body>
 
