feat: :sparkles: Adição da visualização das ofertas na carteira do usuário
Ao fazer uma venda de uma oferta que não tenha compatibilidade com o desejado, será criada uma oferta onde deverá ser visto pelo usuário.

#83

--- a/stocktrade/src/main/resources/templates/carteira.html
+++ b/stocktrade/src/main/resources/templates/carteira.html
@@ -92,6 +92,35 @@
       </div>
 
       <div th:replace="~{fragments/tabela/tabelaAcoesUser :: tabelaAcoesUser}"></div>
+
+    </div>
+
+    <div class="container-fluid mt-2 mb-2">
+      <div class="row ms-5 mt-5">
+        <!-- Coluna dos textos à esquerda -->
+        <div class="col-md-6">
+          <h1 class="h1">
+            Suas Ofertas de Compra
+          </h1>
+        </div>
+      </div>
+
+      <div th:replace="~{fragments/tabela/tabelaOfertasCompraUser :: tabelaOfertasCompraUser}"></div>
+    </div>
+
+    <div class="container-fluid mt-2 mb-2">
+      <div class="row ms-5 mt-5">
+        <!-- Coluna dos textos à esquerda -->
+        <div class="col-md-6">
+          <h1 class="h1">
+            Suas Ofertas de Venda
+          </h1>
+        </div>
+      </div>
+
+      <div th:replace="~{fragments/tabela/tabelaOfertasVendaUser :: tabelaOfertasVendaUser}"></div>
+    </div>
+
   </main>
 
   <footer th:replace="~{fragments/footerLogadoFragment :: footer}"></footer>
